--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "glob": "^10.3.10",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
